--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,208 +6,7 @@
   arxiv={2309.06933},
   project={https://nmhkahn.github.io/dreamstyler},
   github={https://github.com/webtoon/dreamstyler},
-  selected={true},
+  selected={false},
   preview={aaai2024a.gif},
 }
 
-
-@article{ijcv2024a,
-  title={Data Augmentation for Low-Level Vision: CutBlur and Mixture-of-Augmentation},
-  author={Ahn, Namhyuk and Yoo, Jaejun and Sohn, Kyung-Ah},
-  journal={International Journal of Computer Vision (IF=19.5)},
-  year={2024},
-  html={https://link.springer.com/article/10.1007/s11263-023-01970-z},
-  preview={ijcv2024a.png},
-}
-
-
-@article{eswa2024a,
-  title={Decomposing Texture and Semantics for Out-of-distribution Detection},
-  author={Moon*, Jeong-Hyeon and Ahn*, Namhyuk and Sohn, Kyung-Ah},
-  journal={Expert Systems with Applications (IF=8.5)},
-  year={2024},
-  html={https://www.sciencedirect.com/science/article/pii/S095741742302331X},
-  preview={eswa2024a.gif},
-}
-
-
-@article{arxiv2023b,
-  title={DiffBlender: Scalable and Composable Multimodal Text-to-Image Diffusion Models},
-  author={Kim*, Sungnyun and Lee*, Junsoo and Hong, Kibeom and Kim, Daesik and Ahn, Namhyuk},
-  journal={arXiv preprint arXiv:2305.15194},
-  year={2023},
-  arxiv={2305.15194},
-  project={https://sungnyun.github.io/diffblender},
-  github={https://github.com/sungnyun/diffblender},
-  selected={true},
-  preview={arxiv2023b.gif},
-}
-
-
-@article{arxiv2023a,
-  title={Magnitude Attention-based Dynamic Pruning},
-  author={Back, Jihye and Ahn, Namhyuk and Kim, Jangho},
-  journal={arXiv preprint arXiv:2306.05056},
-  year={2023},
-  arxiv={2306.05056},
-  preview={arxiv2023a.png},
-}
-
-
-@inproceedings{iccv2023a,
-  title={AesPA-Net: Aesthetic Pattern-Aware Style Transfer Networks},
-  author={Hong, Kibeom and Jeon, Seogkyu and Lee, Junsoo and Ahn, Namhyuk and Kim, Kunhee and Lee, Pilhyeon and Kim, Daesik and Uh, Youngjung and Byun, Hyeran},
-  booktitle={ICCV},
-  year={2023},
-  arxiv={2307.09724},
-  github={https://github.com/Kibeom-Hong/AesPA-Net},
-  preview={iccv2023a.gif},
-}
-
-
-@inproceedings{cvpr2023a,
-  title={Interactive Cartoonization with Controllable Perceptual Factors},
-  author={Ahn, Namhyuk and Kwon, Patrick and Back, Jihye and Hong, Kibeom and Kim, Seungkwon},
-  booktitle={CVPR},
-  year={2023},
-  arxiv={2212.09555},
-  selected={true},
-  preview={cvpr2023a.gif},
-}
-
-
-@inproceedings{cvprw2023a,
-  title={LPMM: Intuitive Pose Control for Neural Talking-Head Model via Landmark-Parameter Morphable Model},
-  author={Lee, Kwangho and Kwon, Patrick and Lee, Myung Ki and Ahn, Namhyuk and Lee, Junsoo},
-  booktitle={CVPRW},
-  year={2023},
-  arxiv={2305.10456},
-  preview={cvprw2023a.gif},
-}
-
-
-@incollection{satc2022a,
-  title={WebtoonMe: A Data-Centric Approach for Full-Body Portrait Stylization},
-  author={Back*, Jihye and Kim*, Seungkwon and Ahn, Namhyuk},
-  booktitle={SIGGRAPH Asia Technical Communications},
-  year={2022},
-  arxiv={2210.10335},
-  project={https://webtoon.github.io/WebtoonMe/},
-  preview={satc2022a.gif},
-}
-
-
-@article{pr2022a,
-  title={Efficient Deep Neural Network for Photo-Realistic Image Super-Resolution},
-  author={Ahn, Namhyuk and Kang, Byungkon and Sohn, Kyung-Ah},
-  journal={Pattern Recognition (IF=8.0)},
-  year={2022},
-  arxiv={1903.02240},
-  github={https://github.com/nmhkahn/PCARN-pytorch},
-  preview={pr2022a.png},
-}
-
-
-@inproceedings{cvprw2022b,
-  title={Cross-Domain Style Mixing for Face Cartoonization},
-  author={Kim, Seungkwon and Gwak, Chaeheon and Kim, Dohyun and Lee, Kwangho and Back, Jihye and Ahn, Namhyuk and Kim, Daesik},
-  booktitle={CVPRW},
-  year={2022},
-  arxiv={2205.12450},
-  preview={cvprw2022b.gif},
-}
-
-
-@inproceedings{cvprw2022a,
-  title={Exploiting Distortion Information for Multi-Degraded Image Restoration},
-  author={Shin, Wooksu and Ahn, Namhyuk and Moon, Jeong-Hyeon and Sohn, Kyung-Ah},
-  booktitle={CVPRW},
-  year={2022},
-  pdf={https://openaccess.thecvf.com/content/CVPR2022W/NTIRE/papers/Shin_Exploiting_Distortion_Information_for_Multi-Degraded_Image_Restoration_CVPRW_2022_paper.pdf},
-  preview={cvprw2022a.gif},
-}
-
-
-@thesis{phd,
-  title={Toward an Efficient Deep Image Restoration Method},
-  author={Ahn, Namhyuk},
-  school={PhD thesis. Ajou University},
-  year={2021},
-  pdf={thesis_namhyuk_ahn.pdf},
-  preview={thesis.jpg},
-}
-
-
-@inproceedings{iclrw2021a,
-  title={What is Wrong With One-Class Anomaly Detection?},
-  author={Park, JuneKyu and Moon, Jeong-Hyeon and Ahn, Namhyuk and Sohn, Kyung-Ah},
-  booktitle={ICLRW},
-  year={2021},
-  arxiv={2104.09793},
-  github={https://github.com/JuneKyu/CLAD},
-  preview={iclrw2021a.gif},
-}
-
-
-@inproceedings{accv2020a,
-  title={Restoring Spatially-Heterogeneous Distortions Using Mixture of Experts Network},
-  author={Kim*, Sijin and Ahn*, Namhyuk and Sohn, Kyung-Ah},
-  booktitle={ACCV},
-  year={2020},
-  arxiv={2009.14563},
-  preview={accv2020a.gif},
-}
-
-
-@inproceedings{cvpr2020a,
-  title={Rethinking Data Augmentation for Image Super-Resolution: A Comprehensive Analysis and a New Strategy},
-  author={Yoo*, Jaejun and Ahn*, Namhyuk and Sohn, Kyung-Ah},
-  booktitle={CVPR},
-  year={2020},
-  arxiv={2004.00448},
-  github={https://github.com/clovaai/cutblur},
-  selected={true},
-  preview={cvpr2020a.gif},
-}
-
-
-@inproceedings{cvprw2020a,
-  title={SimUSR: A Simple but Strong Baseline for Unsupervised Image Super-Resolution},
-  author={Ahn*, Namhyuk and Yoo*, Jaejun and Sohn, Kyung-Ah},
-  booktitle={CVPRW},
-  year={2020},
-  arxiv={2004.11020},
-  preview={cvprw2020a.gif},
-}
-
-
-@inproceedings{eccv2018a,
-  title={Fast, Accurate, and Lightweight Super-Resolution With Cascading Residual Network},
-  author={Ahn, Namhyuk and Kang, Byungkon and Sohn, Kyung-Ah},
-  booktitle={ECCV},
-  year={2018},
-  arxiv={1803.08664},
-  github={https://github.com/nmhkahn/CARN-pytorch},
-  selected={true},
-  preview={eccv2018a.gif},
-}
-
-
-@inproceedings{cvprw2018a,
-  title={Image Super-Resolution via Progressive Cascading Residual Network},
-  author={Ahn, Namhyuk and Kang, Byungkon and Sohn, Kyung-Ah},
-  booktitle={CVPRW},
-  year={2018},
-  pdf={http://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ahn_Image_Super-Resolution_via_CVPR_2018_paper.pdf},
-  preview={cvprw2018a.gif},
-}
-
-
-@inproceedings{acpr2017a,
-  title={Image Distortion Detection Using Convolutional Neural Network},
-  author={Ahn, Namhyuk and Kang, Byungkon and Sohn, Kyung-Ah},
-  booktitle={ACPR},
-  year={2017},
-  arxiv={1805.10881},
-  preview={acpr2017a.gif},
-}
