--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,10 @@
-@inproceedings{aaai2024a,
-  title={DreamStyler: Paint by Style Inversion with Text-to-Image Diffusion Models},
-  author={Ahn, Namhyuk and Lee, Junsoo and Lee, Chunggi and Kim, Kunhee and Kim, Daesik and Nam, Seung-Hun and Hong, Kibeom},
-  booktitle={AAAI},
+@inproceedings{naacl2024a,
+  title={Advancing beyond identification: Multi-bit watermark for large language models},
+  author={KiYoon Yoo, Wonhyuk Ahn, Nojun Kwak},
+  booktitle={NAACL},
   year={2024},
-  arxiv={2309.06933},
-  project={https://nmhkahn.github.io/dreamstyler},
-  github={https://github.com/webtoon/dreamstyler},
-  selected={false},
-  preview={aaai2024a.gif},
+  arxiv={2308.00221},
+  github={https://github.com/bangawayoo/mb-lm-watermarking,
+  selected={true},
 }
 
