--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,10 @@
 @inproceedings{naacl2024a,
   title={Advancing beyond identification: Multi-bit watermark for large language models},
-  author={KiYoon Yoo, Wonhyuk Ahn, Nojun Kwak},
+  author={Yoo, KiYoon and Ahn, Wonhyuk and Kwak, Nojun},
   booktitle={NAACL},
   year={2024},
   arxiv={2308.00221},
-  github={https://github.com/bangawayoo/mb-lm-watermarking,
+  github={https://github.com/bangawayoo/mb-lm-watermarking},
   selected={true},
 }
 
