--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,4 +7,84 @@
   github={https://github.com/bangawayoo/mb-lm-watermarking},
   selected={true},
 }
+@inproceedings{trustnlp2024,
+title={Exploring Causal Mechanisms for Machine Text Detection Methods},
+author={Yoo, KiYoon and Ahn, Wonhyuk and Song, Yeji and Kwak, Nojun},
+booktitle={Workshop on Trustworthy Natural Language Processing at NAACL},
+year={2024},
+selected={true},
+}
+@inproceedings{clinicalnlp2024,
+title={TEAM MIPAL at MEDIQA-M3G 2024: Large VQA Models for Dermatological Diagnosis},
+author={Kim, Hyeonjin and Kim, Min Kyu and Jang, Jae Won and Yoo, KiYoon and Kwak, Nojun},
+booktitle={Workshop on ClinicalNLP at NAACL},
+year={2024},
+selected={true},
+}
+@inproceedings{dcml2024,
+title={Open Domain Generalization with a Single Network by Regularization Exploiting Pre-trained Features},
+author={Chung, Inseop and Yoo, KiYoon and Kwak, Nojun},
+booktitle={Workshop on Data-centric Machine Learning Research at ICLR},
+year={2024},
+selected={true},
+}
+@inproceedings{acmmm2023,
+title={Dynamic Collective Intelligence Learning: Finding Efficient Sparse Model via Refined Gradients for Pruned Weights},
+author={Kim, Jangho and Yoo, Jayeon and Song, Yeji and Yoo, KiYoon and Kwak, Nojun},
+booktitle={ACM MM},
+year={2023},
+selected={true},
+}
+@inproceedings{acl2023,
+title={Who Leaked My Document? Robust Natural Language Watermarking through Invariant Features},
+author={Yoo, KiYoon and Ahn, WonHyuk and Jang, Jiho and Kwak, Nojun},
+booktitle={ACL},
+year={2023},
+selected={true},
+}
+@inproceedings{wacv2023,
+title={Self-Distilled Self-Supervised Representation Learning},
+author={Jang, Jiho and Yoo, KiYoon and Kim, Seonhoon and Chaerin, Kong and Kim, Jangho and Kwak, Nojun},
+booktitle={WACV},
+year={2023},
+selected={true},
+}
+@inproceedings{emnlp2022,
+title={Backdoor Attacks in Federated Learning by Rare Embeddings and Gradient Ensembling},
+author={Yoo, KiYoon and Kwak, Nojun},
+booktitle={EMNLP},
+year={2022},
+selected={true},
+}
+@inproceedings{acl2022findings,
+title={Detection of Word Adversarial Examples in Text Classification: Benchmark and Baseline via Robust Density Estimation},
+author={Yoo, KiYoon and Kim, Jangho and Jang, Jiho and Kwak, Nojun},
+booktitle={Findings of ACL},
+year={2022},
+}
+@article{cjasn2021,
+title={Deep Learning Model for Real-Time Prediction of Intradialytic Hypotension},
+author={Lee, Hojun and Yun, Donghwan and Yoo, Jayeon and Yoo, KiYoon and Kim, Yong Chul and Kim, Dong Ki and Oh, Kook-Hwan and Joo, Kwon Wook and Kim, Yon Su and Kwak, Nojun and Han, Seung Seok},
+journal={Clinical Journal of the American Society of Nephrology},
+year={2021},
+}
+@inproceedings{neurips2020,
+title={Position-based Scaled Gradient for Model Quantization and Sparse Training},
+author={Kim, Jangho and Yoo, KiYoon and Kwak, Nojun},
+booktitle={NeurIPS},
+year={2020},
+}
 
+
+@article{ahn2024imperceptible,
+title={Imperceptible Protection against Style Imitation from Diffusion Models},
+author={Ahn, NamHyuk and Ahn, WonHyuk and Yoo, KiYoon and Kim, DaeSik and Nam, SeungHoon},
+journal={arXiv preprint},
+year={2024},
+}
+@article{choi2024hardware,
+title={Hardware-Friendly Post-Training Quantization: Input-and Output-Channelwise Scale and Offset},
+author={Choi, Geunjae and Lee, Kamin and Yoo, KiYoon and Kwak, Nojun},
+journal={arXiv preprint},
+year={2024},
+}
