Major update in selected publications, news. - Update author information in _config.yml, add new publications and previews in papers.bib, - adjust news display settings in about.md, and remove outdated publication previews. - add new news posts for joining Krafton and CVPR 2025 acceptance.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,12 @@
+@inproceedings{cvpr2025a,
+  title={Nearly Zero-Cost Protection Against Mimicry by Personalized Diffusion Models}, 
+  author={Namhyuk Ahn and KiYoon Yoo and Wonhyuk Ahn and Daesik Kim and Seung-Hun Nam},
+  booktitle={CVPR},
+  year={2025},
+  url={https://arxiv.org/abs/2412.11423},
+  selected={true},
+  preview={cvpr2025a.png}
+}
 @inproceedings{naacl2024a,
   title={Advancing beyond identification: Multi-bit watermark for large language models},
   author={Yoo, KiYoon and Ahn, Wonhyuk and Kwak, Nojun},
@@ -5,6 +14,7 @@
   year={2024},
   arxiv={2308.00221},
   github={https://github.com/bangawayoo/mb-lm-watermarking},
+  preview={naacl2024a.png},
   selected={true},
 }
 @inproceedings{trustnlp2024,
@@ -13,6 +23,7 @@ author={Yoo, KiYoon and Ahn, Wonhyuk and Song, Yeji and Kwak, Nojun},
 booktitle={Workshop on Trustworthy Natural Language Processing at NAACL},
 year={2024},
 selected={true},
+preview={naaclw2024.png},
 }
 @inproceedings{clinicalnlp2024,
 title={TEAM MIPAL at MEDIQA-M3G 2024: Large VQA Models for Dermatological Diagnosis},
@@ -20,20 +31,21 @@ author={Kim, Hyeonjin and Kim, Min Kyu and Jang, Jae Won and Yoo, KiYoon and Kwa
 booktitle={Workshop on ClinicalNLP at NAACL},
 year={2024},
 selected={true},
+preview={naaclw2024b.png},
 }
 @inproceedings{dcml2024,
 title={Open Domain Generalization with a Single Network by Regularization Exploiting Pre-trained Features},
 author={Chung, Inseop and Yoo, KiYoon and Kwak, Nojun},
 booktitle={Workshop on Data-centric Machine Learning Research at ICLR},
 year={2024},
-selected={true},
+selected={false},
 }
 @inproceedings{acmmm2023,
 title={Dynamic Collective Intelligence Learning: Finding Efficient Sparse Model via Refined Gradients for Pruned Weights},
 author={Kim, Jangho and Yoo, Jayeon and Song, Yeji and Yoo, KiYoon and Kwak, Nojun},
 booktitle={ACM MM},
 year={2023},
-selected={true},
+selected={false},
 }
 @inproceedings{acl2023,
 title={Who Leaked My Document? Robust Natural Language Watermarking through Invariant Features},
@@ -41,6 +53,7 @@ author={Yoo, KiYoon and Ahn, WonHyuk and Jang, Jiho and Kwak, Nojun},
 booktitle={ACL},
 year={2023},
 selected={true},
+preview={acl2023.png},
 }
 @inproceedings{wacv2023,
 title={Self-Distilled Self-Supervised Representation Learning},
@@ -48,6 +61,8 @@ author={Jang, Jiho and Yoo, KiYoon and Kim, Seonhoon and Chaerin, Kong and Kim, 
 booktitle={WACV},
 year={2023},
 selected={true},
+preview={wacv2023.png},
+
 }
 @inproceedings{emnlp2022,
 title={Backdoor Attacks in Federated Learning by Rare Embeddings and Gradient Ensembling},
@@ -55,12 +70,15 @@ author={Yoo, KiYoon and Kwak, Nojun},
 booktitle={EMNLP},
 year={2022},
 selected={true},
+preview={emnlp2022.png},
 }
 @inproceedings{acl2022findings,
 title={Detection of Word Adversarial Examples in Text Classification: Benchmark and Baseline via Robust Density Estimation},
 author={Yoo, KiYoon and Kim, Jangho and Jang, Jiho and Kwak, Nojun},
 booktitle={Findings of ACL},
 year={2022},
+selected={true},
+preview={acl2022.png},
 }
 @article{cjasn2021,
 title={Deep Learning Model for Real-Time Prediction of Intradialytic Hypotension},
@@ -73,6 +91,8 @@ title={Position-based Scaled Gradient for Model Quantization and Sparse Training
 author={Kim, Jangho and Yoo, KiYoon and Kwak, Nojun},
 booktitle={NeurIPS},
 year={2020},
+selected={true},
+preview={neurips2020.png},
 }
 
 
