--- a/_news/2025-01-01-ces.md
+++ b/_news/2025-01-01-ces.md
@@ -4,4 +4,4 @@ date: 2025-01-01
 inline: true
 title: Krafton
 ---
-Our co-playable gaming agent, [PUBG Ally](https://www.youtube.com/watch?v=wEKUSMqrbzQ) developed in collaboration with NVDIA was showcased in CES 2025 Las Vegas!
+Our co-playable gaming agent PUBG Ally developed in collaboration with NVDIA was showcased in CES 2025 Las Vegas! ([NVIDIA ACE](https://www.youtube.com/watch?si=9gMLBxShwrEEZhxc&v=LNx7wrBfnsw&feature=youtu.be), [Live Demo](https://www.youtube.com/shorts/CSf8wglfhO4?si=XYYPRB8DJAdwrlBX)) 
