Update CV details with enhanced descriptions for roles at Krafton and Naver Webtoon, and correct image circularity setting in about page. Highlighted contributions to embodied AI in gaming and AI chatbot service.

--- a/_news/2025-01-01-ces.md
+++ b/_news/2025-01-01-ces.md
@@ -4,4 +4,4 @@ date: 2025-01-01
 inline: true
 title: Krafton
 ---
-Our co-playable gaming agent PUBG Ally developed in collaboration with NVDIA was showcased in CES 2025 Las Vegas! ([NVIDIA ACE](https://www.youtube.com/watch?si=9gMLBxShwrEEZhxc&v=LNx7wrBfnsw&feature=youtu.be), [Live Demo](https://www.youtube.com/shorts/CSf8wglfhO4?si=XYYPRB8DJAdwrlBX)) 
+Our co-playable gaming agent PUBG Ally developed in collaboration with NVDIA was showcased in CES 2025 Las Vegas! (Check out the videos in [NVIDIA ACE](https://www.youtube.com/watch?si=9gMLBxShwrEEZhxc&v=LNx7wrBfnsw&feature=youtu.be), [Live Demo](https://www.youtube.com/shorts/CSf8wglfhO4?si=XYYPRB8DJAdwrlBX)) 
